Fix footer on mobile and remove AdSense ads

--- a/css/extra.css
+++ b/css/extra.css
@@ -37,13 +37,18 @@
 }
 
 footer {
-    position:fixed;
     width: 100%;
-    bottom: 0px;
-    left:0px;
     padding: 20px;
     background-color: rgb(39, 39, 39);
     color: white;
+}
+
+@media (min-height: 700px) {
+    footer {
+        position: fixed;
+        bottom: 0px;
+        left: 0px;
+    }
 }
 
 footer a {
